Bug 10983 - Power tracepoints use the wrong header in 2.6.32-rc7
Summary: Power tracepoints use the wrong header in 2.6.32-rc7
Status: RESOLVED FIXED
Alias: None
Product: systemtap
Classification: Unclassified
Component: tapsets (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Unassigned
URL:
Keywords:
Depends on:
Blocks: blockers-1.1
  Show dependency treegraph
 
Reported: 2009-11-18 21:27 UTC by Josh Stone
Modified: 2009-11-18 21:38 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Josh Stone 2009-11-18 21:27:45 UTC
In 2.6.32-0.48.rc7.git1.fc13.x86_64, there are two power.h tracepoint headers:
one in include/trace/, and the other in include/trace/events/.  Only the latter
has valid declarations, but with the way we search the headers, we find the
former first.
Comment 1 Josh Stone 2009-11-18 21:38:51 UTC
commit 508968a7d10bbae3b9fbc33bf3d3b1e62a8a018a
Author: Josh Stone <jistone@redhat.com>
Date:   Wed Nov 18 13:32:22 2009 -0800

    PR10983: Give preference to tracepoints in trace/events/
    
    In 2.6.32-rc7, there are two power.h tracepoints headers, and only the
    one in trace/events/ is valid.  In general, we can expect that
    trace/events/ has newer headers, so we should search those first.
    
    * tapsets.cxx (tracepoint_builder::init_dw): Search /events/ first.