PR10983: Give preference to tracepoints in trace/events/

In 2.6.32-rc7, there are two power.h tracepoints headers, and only the
one in trace/events/ is valid.  In general, we can expect that
trace/events/ has newer headers, so we should search those first.

* tapsets.cxx (tracepoint_builder::init_dw): Search /events/ first.